# bazel_example

./: MODULE.bazel  WORKSPACE
app/: BUILD.bazel  main.py
inout/: BUILD.bazel  my_custom_rule.bzl
inoutpy/: BUILD.bazel  my_build_tool.py  my_custom_rule.bzl  my_input_file.txt  my_output_file.txt
io/: BUILD.bazel  greeter.py  my_custom_rule.bzl  my_input_file.txt
