#bazel run //app:main_app
#bazel clean
#brew install bazel  #on MAC
#bazel clean --expunge
#https://sourceforge.net/projects/bazel.mirror/postdownload
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "greeter_lib",
    srcs = ["greeter.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "main_app",
    srcs = ["main.py"],
    deps = [":greeter_lib"],
    main = "main.py",
)
