#bazel run //app:main_app
#bazel clean
#brew install bazel  #on MAC
#bazel clean --expunge
#https://sourceforge.net/projects/bazel.mirror/postdownload
#https://www.youtube.com/watch?v=toPWLiUq5Ps&t=2s
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "greeter_lib",
    srcs = ["greeter.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "main_app",
    srcs = ["main.py"],
    deps = [":greeter_lib"],
    main = "main.py",
)
